# tamrin2

./: CMakeLists.txt  README.md
include/: amin.h  danny.h  doctorWhite.h  game.h  hero.h  tahaB.h  tahaK.h  team.h
src/: amin.cpp  danny.cpp  doctorWhite.cpp  game.cpp  hero.cpp  main.cpp  tahaB.cpp  tahaK.cpp  team.cpp
